--- a/csgo-stats/src/renderer/src/assets/index.css
+++ b/csgo-stats/src/renderer/src/assets/index.css
@@ -95,3 +95,18 @@ body {
     height: fit-content;
   }
 }
+
+.match-list{
+  display: flex;
+  place-content: center;
+}
+table {
+  font-size: 18px;
+  background-color: var(--foreground-color);
+}
+td {
+  padding: 1.5em;
+}
+.td-map {
+  padding-right: 3em;
+}
