tables css start

--- a/csgo-stats/src/renderer/src/assets/index.css
+++ b/csgo-stats/src/renderer/src/assets/index.css
@@ -138,3 +138,9 @@ td {
   width: fit-content;
   padding: 2em;
 }
+
+.scoreboard {
+  display: flex;
+  place-items: center;
+  flex-direction: column;
+}
