--- a/csgo-stats/src/renderer/src/assets/index.css
+++ b/csgo-stats/src/renderer/src/assets/index.css
@@ -144,3 +144,11 @@ td {
   place-items: center;
   flex-direction: column;
 }
+
+.view-match {
+  color: white;
+  border: solid white 2px;
+  border-radius: 5px;
+  display: grid;
+  place-content: center;
+}
